2003-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Changed the method MD4Final uses to produce the binary
	result to avoid problems on 64bit architectures.
	* md4.c:     Removed the c_src subdirectory and moved all files
	* md4.h:     into the md4 module directory. We want to keep the
	* md4c.tcl:  source tree as flat as possible.
	* md4.tcl, md4.man, pkgIndex.tcl: Hiked version to 1.0.1
	
2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-30  Pat Thoyts  <Patrick.Thoyts@renishaw.com>

	* md4.man: Added documentation for the hmac command and for the
	programming interface to the MD4 algorithm.
	* md4c.tcl: Fixed md5c attribution.

2003-04-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4c.tcl: Added critcl-based C implementation md4c.
	* md4.tcl:  Enable use of md4c if available.
	* md4.test: Report the implmentation (C or pure-tcl)
	* c_src/md4.h:  The md4 implementation from RFC1320
	* c_src/md4.c: 
	
2003-04-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.test: Added a series of tests to check all lengths of input
	up to over 2 MD4 block lengths.
	* md4_check.c: Included the C code used to generate the new test
	results from the OpenSSL MD4 implementation.

2003-04-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Implemented chunked reading from file or
	channel, added -file and -channel options to md4.
	Implemented hmac command with -key option.
	Provide MD4Init, MD4Update, MD4Final as per C-usage to permit use
	on streaming data.
	
2003-04-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.test: 
	* md4.tcl:
	* md4.man:
	* ChangeLog:  Initial versions.
